--- a/main.html
+++ b/main.html
@@ -10,6 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h3>What is the capital of India?</h3>
+	<input type="radio" name="capital">New Delhi
+	<br>
+	<input type="radio" name="capital">Mumbai
+	<br>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 
 </body>
 
